significant pathay differences for pasteurization

--- a/metagenomics.ipynb
+++ b/metagenomics.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "a284a5a8-0b6d-4466-9a7e-ee8fe71db068",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "5dada12d-b773-49c3-8c1b-f539ae9982c9",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "04e09bc5-ab3f-4bb0-b8c8-1bced40bdf6e",
    "metadata": {},
    "outputs": [],
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "7890798b-0243-4036-9cb9-a1e2e08451db",
    "metadata": {},
    "outputs": [
@@ -585,68 +585,105 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Usage: \u001b[94mqiime composition add-pseudocount\u001b[0m [OPTIONS]\n",
-      "\n",
-      "  Increment all counts in table by pseudocount.\n",
-      "\n",
-      "\u001b[1mInputs\u001b[0m:\n",
-      "  \u001b[94m\u001b[4m--i-table\u001b[0m ARTIFACT \u001b[32mFeatureTable[Frequency]\u001b[0m\n",
-      "                       The feature table to which pseudocounts should be\n",
-      "                       added.                                       \u001b[35m[required]\u001b[0m\n",
-      "\u001b[1mParameters\u001b[0m:\n",
-      "  \u001b[94m--p-pseudocount\u001b[0m INTEGER\n",
-      "                       The value to add to all counts in the feature table.\n",
-      "                                                                  \u001b[35m[default: 1]\u001b[0m\n",
-      "\u001b[1mOutputs\u001b[0m:\n",
-      "  \u001b[94m\u001b[4m--o-composition-table\u001b[0m ARTIFACT \u001b[32mFeatureTable[Composition]\u001b[0m\n",
-      "                       The resulting feature table.                 \u001b[35m[required]\u001b[0m\n",
-      "\u001b[1mMiscellaneous\u001b[0m:\n",
-      "  \u001b[94m--output-dir\u001b[0m PATH    Output unspecified results to a directory\n",
-      "  \u001b[94m--verbose\u001b[0m / \u001b[94m--quiet\u001b[0m  Display verbose output to stdout and/or stderr during\n",
-      "                       execution of this action. Or silence output if\n",
-      "                       execution is successful (silence is golden).\n",
-      "  \u001b[94m--example-data\u001b[0m PATH  Write example data and exit.\n",
-      "  \u001b[94m--citations\u001b[0m          Show citations and exit.\n",
-      "  \u001b[94m--help\u001b[0m               Show this message and exit.\n",
-      "\n",
-      "\u001b[33m                  There were some problems with the command:                  \u001b[0m\n",
-      "\u001b[31m\u001b[1m (1/2) Invalid value for '--i-table': '/metagenomics/pathway_abundance.qza' is\n",
-      "  not a valid filepath\u001b[0m\n",
-      "\u001b[31m\u001b[1m (2/2) Invalid value for '--o-composition-table': Directory '/metagenomics'\n",
-      "  does not exist, cannot save 'pathway_abundance_differences.qza' into it.\u001b[0m\n",
+      "\u001b[32mSaved FeatureTable[Composition] to: CE/picrust2_results/pathway_abundance_differences.qza\u001b[0m\n",
       "\u001b[0m"
      ]
     }
    ],
    "source": [
     "! qiime composition add-pseudocount \\\n",
-    "    --i-table $data_dir/metagenomics/pathway_abundance.qza \\\n",
-    "    --o-composition-table $data_dir/metagenomics/pathway_abundance_differences.qza"
+    "    --i-table $data_dir/picrust2_results/pathway_abundance.qza \\\n",
+    "    --o-composition-table $data_dir/picrust2_results/pathway_abundance_differences.qza"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "46d13c2b-a013-406f-b2a8-dab13fc57bb7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved Visualization to: CE/pa_ancom_pasteurized.qzv\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "! qiime composition ancom \\\n",
+    "    --i-table $data_dir/picrust2_results/pathway_abundance_differences.qza \\\n",
+    "    --m-metadata-file $data_dir/food-metadata.tsv \\\n",
+    "    --m-metadata-column pasteurized \\\n",
+    "    --p-transform-function log \\\n",
+    "    --o-visualization $data_dir/pa_ancom_pasteurized.qzv"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "ed20694f-7b68-4e11-9ae4-e2162e840f46",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><img onload=\"(function(div, url){\n",
+       "if (typeof require !== 'undefined') {\n",
+       "    var baseURL = require.toUrl('').split('/').slice(0, -2).join('/');\n",
+       "} else {\n",
+       "    var baseURL = JSON.parse(\n",
+       "        document.getElementById('jupyter-config-data').innerHTML\n",
+       "    ).baseUrl.slice(0, -1);\n",
+       "}\n",
+       "url = baseURL + url;\n",
+       "fetch(url).then(function(res) {\n",
+       "    if (res.status === 404) {\n",
+       "        div.innerHTML = 'Install QIIME 2 Jupyter extension with:<br />' +\n",
+       "                        '<code>jupyter serverextension enable --py qiime2' +\n",
+       "                        ' --sys-prefix</code><br />then restart your server.' +\n",
+       "                        '<br /><br />(Interactive output not available on ' +\n",
+       "                        'static notebook viewer services like nbviewer.)';\n",
+       "    } else if (res.status === 409) {\n",
+       "        div.innerHTML = 'Visualization no longer in scope. Re-run this cell' +\n",
+       "                        ' to see the visualization.';\n",
+       "    } else if (res.ok) {\n",
+       "        url = res.url;\n",
+       "        div.innerHTML = '<iframe src=\\'' + url + '\\' style=\\'' +\n",
+       "                        'width: 100%; height: 700px; border: 0;\\'>' +\n",
+       "                        '</iframe><hr />Open in a: <a href=\\'' + url + '\\'' +\n",
+       "                        ' target=\\'_blank\\'>new window</a>'\n",
+       "    } else {\n",
+       "        div.innerHTML = 'Something has gone wrong. Check notebook server for' +\n",
+       "                        ' errors.';\n",
+       "    }\n",
+       "});\n",
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-1nl5rf0e')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+      ],
+      "text/plain": [
+       "<visualization: Visualization uuid: 51d891ea-a130-4576-b4ad-9fa615e19bdb>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Visualization.load(f'{data_dir}/pa_ancom_pasteurized.qzv')"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e3679772-8208-4fc7-ac68-21182d3615fe",
+   "cell_type": "markdown",
+   "id": "ff388643-44db-4bbf-b84e-5b0791753b96",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "three significant different pathways were found for pasteurized vs non pasteurized: \n",
+    "GLUCOSE1PMETAB-PWY\t465\n",
+    "PWY0-1533\t420\n",
+    "PWY-6397\t420"
+   ]
   },
   {
    "cell_type": "code",
