--- a/metagenomics.ipynb
+++ b/metagenomics.ipynb
@@ -244,38 +244,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "3fe0f50b-999b-452a-a20f-8e42158fb0f8",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f891bf5d-45e8-449f-99f2-358d09237db8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#han mal no nüt gfiltered (nur copy pasted)\n",
-    "#! qiime feature-table filter-samples \\\n",
-    "    --i-table $data_dir/picrust2_results/ko_metagenome.qza \\\n",
-    "    --m-metadata-file $data_dir/metadata.tsv \\\n",
-    "    --p-where \"[mom_or_child]='C'\" \\\n",
-    "    --o-filtered-table $data_dir/picrust2_results/ko_metagenome_child.qza\n",
-    "\n",
-    "#! qiime feature-table filter-samples \\\n",
-    "    --i-table $data_dir/picrust2_results/ec_metagenome.qza \\\n",
-    "    --m-metadata-file $data_dir/metadata.tsv \\\n",
-    "    --p-where \"[mom_or_child]='C'\" \\\n",
-    "    --o-filtered-table $data_dir/picrust2_results/ec_metagenome_child.qza\n",
-    "#! qiime feature-table filter-samples \\\n",
-    "    --i-table $data_dir/picrust2_results/pathway_abundance.qza \\\n",
-    "    --m-metadata-file $data_dir/metadata.tsv \\\n",
-    "    --p-where \"[mom_or_child]='C'\" \\\n",
-    "    --o-filtered-table $data_dir/picrust2_results/pathway_abundance_child.qza"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "6d20c5b0-aae0-4e50-b560-237404dc9907",
@@ -294,7 +262,7 @@
    "id": "d3c3ee55-2540-4c47-a31a-1ce238441b96",
    "metadata": {},
    "source": [
-    "let's have a look at these tables. They don't contain any information about ASVs anymore but about different levels of the functional profiles:\n",
+    "The tables now contain information about different levels of the functional profiles:\n",
     "\n",
     "1. `ko` table: columns represent KEGG orthologs, as indicated by their names (e.g., **K**19777)\n",
     "2. `ec` table: columns represent enzymes, as indicated by the Enzyme Commission numbers (e.g., **EC**:1.1.1.108)\n",
@@ -306,7 +274,7 @@
    "id": "3e98b0c7-59d3-4aac-96f6-8933c9ca9d13",
    "metadata": {},
    "source": [
-    "let's merge feature table with the pasteurization column from the metadata."
+    "Feature table was merged with the pasteurization column from the metadata."
    ]
   },
   {
@@ -571,8 +539,7 @@
    "id": "b88867e9-72bf-4393-9833-75b1927e68ca",
    "metadata": {},
    "source": [
-    "Don't see anything too interesting...\n",
-    "let's continue with enriched pathways"
+    "Nothing too interesting was seen, so let's continue with enriched pathways."
    ]
   },
   {
@@ -594,6 +561,14 @@
     "! qiime composition add-pseudocount \\\n",
     "    --i-table $data_dir/picrust2_results/pathway_abundance.qza \\\n",
     "    --o-composition-table $data_dir/picrust2_results/pathway_abundance_differences.qza"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b91973a2-fb68-4133-8b5b-82b1c1e2c406",
+   "metadata": {},
+   "source": [
+    "Ancom, to look at whether there are significant differences in the pathways of pasteruized verus non-pasteruized cheeses."
    ]
   },
   {
@@ -622,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "ed20694f-7b68-4e11-9ae4-e2162e840f46",
    "metadata": {},
    "outputs": [
@@ -659,13 +634,13 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-8gpvg6zz')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-n_dda7ki')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
        "<visualization: Visualization uuid: 51d891ea-a130-4576-b4ad-9fa615e19bdb>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -680,9 +655,9 @@
    "metadata": {},
    "source": [
     "three significant different pathways were found for pasteurized vs non pasteurized: \n",
-    "GLUCOSE1PMETAB-PWY\t465\n",
-    "PWY0-1533\t420\n",
-    "PWY-6397\t420"
+    "- GLUCOSE1PMETAB-PWY\twith W = 465 -> more abundant in pasteurized\n",
+    "- PWY0-1533\twith W = 420 -> more abundant in pasteurized\n",
+    "- PWY-6397\twith W = 420 -> more abundant in non-pasteurized"
    ]
   },
   {
@@ -695,7 +670,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32mSaved Visualization to: CE/pa_ancom_rindtype.qzv\u001b[0m\n",
+      "Usage: \u001b[94mqiime composition ancom\u001b[0m [OPTIONS]\n",
+      "\n",
+      "  Apply Analysis of Composition of Microbiomes (ANCOM) to identify features\n",
+      "  that are differentially abundant across groups.\n",
+      "\n",
+      "\u001b[1mInputs\u001b[0m:\n",
+      "  \u001b[94m\u001b[4m--i-table\u001b[0m ARTIFACT \u001b[32mFeatureTable[Composition]\u001b[0m\n",
+      "                       The feature table to be used for ANCOM computation.\n",
+      "                                                                    \u001b[35m[required]\u001b[0m\n",
+      "\u001b[1mParameters\u001b[0m:\n",
+      "  \u001b[94m\u001b[4m--m-metadata-file\u001b[0m METADATA\n",
+      "  \u001b[94m\u001b[4m--m-metadata-column\u001b[0m COLUMN  \u001b[32mMetadataColumn[Categorical]\u001b[0m\n",
+      "                       The categorical sample metadata column to test for\n",
+      "                       differential abundance across.               \u001b[35m[required]\u001b[0m\n",
+      "  \u001b[94m--p-transform-function\u001b[0m TEXT \u001b[32mChoices('sqrt', 'log', 'clr')\u001b[0m\n",
+      "                       The method applied to transform feature values before\n",
+      "                       generating volcano plots.              \u001b[35m[default: 'clr']\u001b[0m\n",
+      "  \u001b[94m--p-difference-function\u001b[0m TEXT \u001b[32mChoices('mean_difference', 'f_statistic')\u001b[0m\n",
+      "                       The method applied to visualize fold difference in\n",
+      "                       feature abundances across groups for volcano plots.\n",
+      "                                                                    \u001b[35m[optional]\u001b[0m\n",
+      "\u001b[1mOutputs\u001b[0m:\n",
+      "  \u001b[94m\u001b[4m--o-visualization\u001b[0m VISUALIZATION\n",
+      "                                                                    \u001b[35m[required]\u001b[0m\n",
+      "\u001b[1mMiscellaneous\u001b[0m:\n",
+      "  \u001b[94m--output-dir\u001b[0m PATH    Output unspecified results to a directory\n",
+      "  \u001b[94m--verbose\u001b[0m / \u001b[94m--quiet\u001b[0m  Display verbose output to stdout and/or stderr during\n",
+      "                       execution of this action. Or silence output if\n",
+      "                       execution is successful (silence is golden).\n",
+      "  \u001b[94m--example-data\u001b[0m PATH  Write example data and exit.\n",
+      "  \u001b[94m--citations\u001b[0m          Show citations and exit.\n",
+      "  \u001b[94m--help\u001b[0m               Show this message and exit.\n",
+      "\n",
+      "\u001b[33m                    There was a problem with the command:                     \u001b[0m\n",
+      "\u001b[31m\u001b[1m (1/1) Got unexpected extra arguments (bloomy, washed)\u001b[0m\n",
       "\u001b[0m"
      ]
     }
@@ -704,14 +713,14 @@
     "! qiime composition ancom \\\n",
     "    --i-table $data_dir/picrust2_results/pathway_abundance_differences.qza \\\n",
     "    --m-metadata-file $data_dir/food-metadata.tsv \\\n",
-    "    --m-metadata-column rindtype \\\n",
+    "    --m-metadata-column rindtype 'bloomy', 'washed' \\\n",
     "    --p-transform-function log \\\n",
-    "    --o-visualization $data_dir/pa_ancom_rindtype.qzv"
+    "    --o-visualization $data_dir/pa_ancom_rindtype_bloomy_vs_washed.qzv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "10e5cacf-f6f7-4cab-b67d-422dd4b289e4",
    "metadata": {},
    "outputs": [
@@ -748,13 +757,13 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-n89ombqi')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-fd4w5mlp')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
        "<visualization: Visualization uuid: 9cacd381-c903-4b17-aed9-5efe8cbbda1b>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
