--- a/metagenomics.ipynb
+++ b/metagenomics.ipynb
@@ -661,8 +661,144 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "063280fb-ab1f-4412-b606-c15f19323ec4",
+   "metadata": {},
+   "source": [
+    "Now we want to compare bloomy and washed rindtypes. As the rindtype column has more than two classes we first need to filter the third class (natural) out."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "fdc9ead7-7cb5-4441-8818-503f5395359f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved FeatureTable[Frequency] to: CE/picrust2_results/pathway_abundance_washed_bloomy.qza\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "! qiime feature-table filter-samples \\\n",
+    "    --i-table $data_dir/picrust2_results/pathway_abundance.qza \\\n",
+    "    --m-metadata-file $data_dir/food-metadata.tsv \\\n",
+    "    --p-where \"[rindtype]='washed' AND [rindtype]='bloomy'\" \\\n",
+    "    --o-filtered-table $data_dir/picrust2_results/pathway_abundance_washed_bloomy.qza"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "69276282-74a2-42b7-810d-7f1107463439",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pawb = q2.Artifact.load(f'{data_dir}/picrust2_results/pathway_abundance_washed_bloomy.qza').view(pd.DataFrame)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "ba5cef81-2c7e-4f58-b3de-fe6bc6b4f6d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pawb.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d1e423d8-297c-4ccb-a1bd-e85999bd8cd2",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "CE/picrust2_results/pathway_abundance_washed_bloomy.qzv does not exist.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [8]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mVisualization\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mdata_dir\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m/picrust2_results/pathway_abundance_washed_bloomy.qzv\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/opt/conda/lib/python3.8/site-packages/qiime2/sdk/result.py:66\u001b[0m, in \u001b[0;36mResult.load\u001b[0;34m(cls, filepath)\u001b[0m\n\u001b[1;32m     63\u001b[0m \u001b[38;5;129m@classmethod\u001b[39m\n\u001b[1;32m     64\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mload\u001b[39m(\u001b[38;5;28mcls\u001b[39m, filepath):\n\u001b[1;32m     65\u001b[0m     \u001b[38;5;124;03m\"\"\"Factory for loading Artifacts and Visualizations.\"\"\"\u001b[39;00m\n\u001b[0;32m---> 66\u001b[0m     archiver \u001b[38;5;241m=\u001b[39m \u001b[43marchive\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mArchiver\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilepath\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     68\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m Artifact\u001b[38;5;241m.\u001b[39m_is_valid_type(archiver\u001b[38;5;241m.\u001b[39mtype):\n\u001b[1;32m     69\u001b[0m         result \u001b[38;5;241m=\u001b[39m Artifact\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__new__\u001b[39m(Artifact)\n",
+      "File \u001b[0;32m/opt/conda/lib/python3.8/site-packages/qiime2/core/archive/archiver.py:299\u001b[0m, in \u001b[0;36mArchiver.load\u001b[0;34m(cls, filepath)\u001b[0m\n\u001b[1;32m    297\u001b[0m \u001b[38;5;129m@classmethod\u001b[39m\n\u001b[1;32m    298\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mload\u001b[39m(\u001b[38;5;28mcls\u001b[39m, filepath):\n\u001b[0;32m--> 299\u001b[0m     archive \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mcls\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_archive\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilepath\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    300\u001b[0m     Format \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mcls\u001b[39m\u001b[38;5;241m.\u001b[39mget_format_class(archive\u001b[38;5;241m.\u001b[39mversion)\n\u001b[1;32m    301\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m Format \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
+      "File \u001b[0;32m/opt/conda/lib/python3.8/site-packages/qiime2/core/archive/archiver.py:259\u001b[0m, in \u001b[0;36mArchiver.get_archive\u001b[0;34m(cls, filepath)\u001b[0m\n\u001b[1;32m    257\u001b[0m filepath \u001b[38;5;241m=\u001b[39m pathlib\u001b[38;5;241m.\u001b[39mPath(filepath)\n\u001b[1;32m    258\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m filepath\u001b[38;5;241m.\u001b[39mexists():\n\u001b[0;32m--> 259\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m does not exist.\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m%\u001b[39m filepath)\n\u001b[1;32m    261\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m _ZipArchive\u001b[38;5;241m.\u001b[39mis_archive_type(filepath):\n\u001b[1;32m    262\u001b[0m     archive \u001b[38;5;241m=\u001b[39m _ZipArchive(filepath)\n",
+      "\u001b[0;31mValueError\u001b[0m: CE/picrust2_results/pathway_abundance_washed_bloomy.qzv does not exist."
+     ]
+    }
+   ],
+   "source": [
+    "Visualization.load(f'{data_dir}/picrust2_results/pathway_abundance_washed_bloomy.qzv')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "95ad4ad6-8e6b-4eaa-80a6-eac4de67584c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved FeatureTable[Composition] to: CE/picrust2_results/pathway_abundance_differences_washed_bloomy.qza\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "! qiime composition add-pseudocount \\\n",
+    "    --i-table $data_dir/picrust2_results/pathway_abundance_washed_bloomy.qza \\\n",
+    "    --o-composition-table $data_dir/picrust2_results/pathway_abundance_differences_washed_bloomy.qza"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "0e066c46-f978-4686-815f-6c0da8a0d4ca",
    "metadata": {},
    "outputs": [
@@ -670,50 +806,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Usage: \u001b[94mqiime composition ancom\u001b[0m [OPTIONS]\n",
+      "\u001b[31m\u001b[1mPlugin error from composition:\n",
       "\n",
-      "  Apply Analysis of Composition of Microbiomes (ANCOM) to identify features\n",
-      "  that are differentially abundant across groups.\n",
+      "  `ids_to_keep` must contain at least one ID.\n",
       "\n",
-      "\u001b[1mInputs\u001b[0m:\n",
-      "  \u001b[94m\u001b[4m--i-table\u001b[0m ARTIFACT \u001b[32mFeatureTable[Composition]\u001b[0m\n",
-      "                       The feature table to be used for ANCOM computation.\n",
-      "                                                                    \u001b[35m[required]\u001b[0m\n",
-      "\u001b[1mParameters\u001b[0m:\n",
-      "  \u001b[94m\u001b[4m--m-metadata-file\u001b[0m METADATA\n",
-      "  \u001b[94m\u001b[4m--m-metadata-column\u001b[0m COLUMN  \u001b[32mMetadataColumn[Categorical]\u001b[0m\n",
-      "                       The categorical sample metadata column to test for\n",
-      "                       differential abundance across.               \u001b[35m[required]\u001b[0m\n",
-      "  \u001b[94m--p-transform-function\u001b[0m TEXT \u001b[32mChoices('sqrt', 'log', 'clr')\u001b[0m\n",
-      "                       The method applied to transform feature values before\n",
-      "                       generating volcano plots.              \u001b[35m[default: 'clr']\u001b[0m\n",
-      "  \u001b[94m--p-difference-function\u001b[0m TEXT \u001b[32mChoices('mean_difference', 'f_statistic')\u001b[0m\n",
-      "                       The method applied to visualize fold difference in\n",
-      "                       feature abundances across groups for volcano plots.\n",
-      "                                                                    \u001b[35m[optional]\u001b[0m\n",
-      "\u001b[1mOutputs\u001b[0m:\n",
-      "  \u001b[94m\u001b[4m--o-visualization\u001b[0m VISUALIZATION\n",
-      "                                                                    \u001b[35m[required]\u001b[0m\n",
-      "\u001b[1mMiscellaneous\u001b[0m:\n",
-      "  \u001b[94m--output-dir\u001b[0m PATH    Output unspecified results to a directory\n",
-      "  \u001b[94m--verbose\u001b[0m / \u001b[94m--quiet\u001b[0m  Display verbose output to stdout and/or stderr during\n",
-      "                       execution of this action. Or silence output if\n",
-      "                       execution is successful (silence is golden).\n",
-      "  \u001b[94m--example-data\u001b[0m PATH  Write example data and exit.\n",
-      "  \u001b[94m--citations\u001b[0m          Show citations and exit.\n",
-      "  \u001b[94m--help\u001b[0m               Show this message and exit.\n",
-      "\n",
-      "\u001b[33m                    There was a problem with the command:                     \u001b[0m\n",
-      "\u001b[31m\u001b[1m (1/1) Got unexpected extra arguments (bloomy, washed)\u001b[0m\n",
+      "Debug info has been saved to /tmp/qiime2-q2cli-err-yukzg34z.log\u001b[0m\n",
       "\u001b[0m"
      ]
     }
    ],
    "source": [
     "! qiime composition ancom \\\n",
-    "    --i-table $data_dir/picrust2_results/pathway_abundance_differences.qza \\\n",
+    "    --i-table $data_dir/picrust2_results/pathway_abundance_differences_washed_bloomy.qza \\\n",
     "    --m-metadata-file $data_dir/food-metadata.tsv \\\n",
-    "    --m-metadata-column rindtype 'bloomy', 'washed' \\\n",
+    "    --m-metadata-column rindtype \\\n",
     "    --p-transform-function log \\\n",
     "    --o-visualization $data_dir/pa_ancom_rindtype_bloomy_vs_washed.qzv"
    ]
@@ -769,7 +875,7 @@
     }
    ],
    "source": [
-    "Visualization.load(f'{data_dir}/pa_ancom_rindtype.qzv')"
+    "Visualization.load(f'{data_dir}/pa_ancom_rindtype_bloomy_vs_washed.qzv')"
    ]
   },
   {
